# scan-metadata

./: Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  rust.yml
src/: camera_profiles.rs  dayone_export_to_exif.py  exif.rs  lib.rs  main.rs  models.rs  scan_metadata.rs  util.rs
tests/: cli_tests.rs
tests/cmd/: invalid_filelist.toml  invalid_profiles.toml  invalid_version.toml  invalid_zipfile.toml  match_trailing_digits.toml  missing_filelist.toml  success.toml  success_internal.toml  success_internal_with_cam_profiles.toml  success_legacy.toml  success_legacy_with_cam_profiles.toml  success_quiet.toml  success_with_cam_profiles.toml
tests/cmd/data/: invalid-profile.yaml  valid-profile.yaml
tests/cmd/split_rolls/: invalid_version.toml  success.toml  success_quiet.toml
tests/cmd/update_scan_exif/: invalid_filelist.toml  invalid_version.toml  missing_filelist.toml  success_legacy.toml  success_with_cam_profiles.toml
