[package]
name = "scan-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.40", features = ["alloc"] }
clap = { version = "4.5.35", features = ["derive"] }
either = "1.15.0"
lazy_static = "1.5.0"
log = "0.4.27"
num = "0.4.3"
num-rational = "0.4.2"
regex = "1.11.1"
rexiv2 = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
thiserror = "2.0.12"
trycmd = "0.15.9"
zip = "2.6.0"
