[package]
name = "scan-metadata"
version = "0.1.0"
edition = "2024"
default-run = "update_scan_exif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.40", features = ["alloc"] }
chrono-tz = "0.10.3"
clap = { version = "4.5.35", features = ["derive"] }
ctor = "0.4.1"
directories = "6.0.0"
either = "1.15.0"
log = "0.4.27"
num = "0.4.3"
num-rational = "0.4.2"
regex = "1.11.1"
rexiv2 = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
thiserror = "2.0.12"
trycmd = "0.15.9"
zip = "2.6.0"

[dev-dependencies]
mockall = "0.13.1"
mockall_double = "0.3.1"
